--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "leancloud-storage": "^3.5.0",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
     "sass-loader": "^6.0.6",
