--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize.css": "^7.0.0",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
+    "vue-infinite-loading": "^2.2.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
