fix yaml format

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-language: "node_js"
-node_js: "node"
+language: node_js
+node_js: node
 cache:
   directories:
     - "node_modules"
 before_script:
-  - echo "{\n  \"id\": \"$AppID\",\n  \"key\": \"$AppKEY\" \n}" > src/assets/leancloud.json
+  - echo "{\n  \"id\":\"$AppID\",\n  \"key\":\"$AppKEY\" \n}" > src/assets/leancloud.json
   - git config user.name "moonou"
   - git config user.email "moonoulong@gmail.com"
   - git clone --branch gh-pages https://${REPOSITORY} dist
