--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ script:
 env:
   global:
    - REPOSITORY: github.com/meowuu/Burmilla.git
-   - GH_TOKEN: 9ac498c1d02edd03b1719a460e19a8556f8e68a6
+   - GH_TOKEN: $GithubToken
